--- a/biblioteca.css
+++ b/biblioteca.css
@@ -1,14 +1,12 @@
 
 p{
-    color:blue;
+    color:blue !important;
     background-color:yellow;
 
-    
     }
 
 body:active{
     flex-direction: row-reverse;
-
     margin-left: 200px;
 }
 
@@ -20,7 +18,6 @@ body{
 img:active{
 
 box-shadow: -40px -10px 5px 0px rgb(171, 168, 167 );
-
 -webkit-filter: grayscale(100%);
 filter: grayscale(100%);
 
@@ -48,7 +45,7 @@ img{
 
 
 h2:hover{
-    font-size: 35px;
+    font-size: 30px;
 }
 
 
